--- a/2-4e/2-4e.vcxproj.filters
+++ b/2-4e/2-4e.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="Ranking.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Result.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Define.h">
